--- a/index.html
+++ b/index.html
@@ -156,7 +156,170 @@ body.christmas {
 </div>
 
 <div id="game-list">
-  <!-- PLACEHOLDER: paste all your game cards here -->
+  
+<!-- ALL GAME CARDS -->
+<a class="game-card" href="https://codingiscool464.github.io/a-small-world-cup/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1209.png');"></div>
+  <div class="game-info"><h2>A Small World Cup</h2><p>Physics • Soccer • Funny</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/maingames/games/index.html" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1208.png');"></div>
+  <div class="game-info"><h2>Amhooman Games</h2><p>Browser • Multi-game arcade</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/AwesomeTanks2/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1225.png');"></div>
+  <div class="game-info"><h2>Awesome Tanks 2</h2><p>Tanks • Shooter • Upgrades</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/bitlife/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1211.jpeg');"></div>
+  <div class="game-info"><h2>BitLife</h2><p>Life Simulator</p></div>
+  <span class="star">★</span>
+</a>
+  
+<a class="game-card" href="https://codingiscool464.github.io/DreadheadParkour/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/dreadhead-parkour.png');"></div>
+  <div class="game-info"><h2>Dreadhead Parkour</h2><p>Car • 3D • Multi-Button</p></div>
+  <span class="star">★</span>
+</a>
+  
+<a class="game-card" href="https://codingiscool464.github.io/DriftBoss/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/IMG_1243.png');"></div>
+  <div class="game-info"><h2>Drift Boss</h2><p>Car • Casual • One-Button</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/DriveMad/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/IMG_1244.jpeg');"></div>
+  <div class="game-info"><h2>Drive Mad</h2><p>Funny • Skill • Precision</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/eggycar/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1212.jpeg');"></div>
+  <div class="game-info"><h2>Eggy Car</h2><p>Car • Hill Climb • Balance</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/fnaf/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1213.jpeg');"></div>
+  <div class="game-info"><h2>FNAF 1</h2><p>Horror • Cameras • Survive</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/FNAF2/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1224.jpeg');"></div>
+  <div class="game-info"><h2>FNAF 2</h2><p>Horror • Survival</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/FNAF3/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1233.webp');"></div>
+  <div class="game-info"><h2>FNAF 3</h2><p>Horror • Springtrap</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/FNAF4/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1235.webp');"></div>
+  <div class="game-info"><h2>FNAF 4</h2><p>Horror • Nightmare</p></div>
+  <span class="star">★</span>
+</a>
+  
+<a class="game-card" href="https://codingiscool464.github.io/leveldevil/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/level%20devil.png');"></div>
+  <div class="game-info"><h2>Level Devil</h2><p>Parkour • 2D</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/MonkeyMart/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/IMG_1234.jpeg');"></div>
+  <div class="game-info"><h2>Monkey Mart</h2><p>Shopping • Fun</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/MotoX3M/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/moto-x3m.png');"></div>
+  <div class="game-info"><h2>Moto X3M</h2><p>Stunt • Racing</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/MotoX3M/2/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/moto-x3m-2.png');"></div>
+  <div class="game-info"><h2>Moto X3M 2</h2><p>Adrenaline • Extreme</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/MotoX3M/5-pool-party/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/moto-x3m-5-pool-party.png');"></div>
+  <div class="game-info"><h2>Moto X3M Pool Party</h2><p>Water • Fun</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/MotoX3M/6-spooky-land/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/spooky-land.png');"></div>
+  <div class="game-info"><h2>Moto X3M Spooky Land</h2><p>Scary • Motorcycle</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/MotoX3M/4-winter/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/moto-x3m-4-winter.png');"></div>
+  <div class="game-info"><h2>Moto X3M Winter</h2><p>Winter • Motorcycle</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/OvO/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1226.png');"></div>
+  <div class="game-info"><h2>OvO</h2><p>Parkour • Momentum</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/polytrack/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1210.jpeg');"></div>
+  <div class="game-info"><h2>PolyTrack</h2><p>Racing • Fast • Flow</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/ragdoll-archers/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1215.webp');"></div>
+  <div class="game-info"><h2>Ragdoll Archers</h2><p>Bow Combat • Physics</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/run3/game" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1216.jpeg');"></div>
+  <div class="game-info"><h2>Run 3</h2><p>Runner • Void • Gravity</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/SliceMaster/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/slice-master.png');"></div>
+  <div class="game-info"><h2>Slice Master</h2><p>Satisfying • Fruit • Timing</p></div>
+  <span class="star">★</span>
+</a>
+  
+<a class="game-card" href="https://codingiscool464.github.io/slope/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/IMG_1240.png');"></div>
+  <div class="game-info"><h2>Slope</h2><p>Fast • Reaction • Skill</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/SubwaySurfers/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/IMG_1239.png');"></div>
+  <div class="game-info"><h2>Subway Surfers</h2><p>Runner • Dodge • Fast</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/SurvivalRace/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/survival-race.png');"></div>
+  <div class="game-info"><h2>Survival Race</h2><p>Tiles • Spleef • Car</p></div>
+  <span class="star">★</span>
+</a>
+
 </div>
 </div>
 
