--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ p.header-sub{text-align:center;opacity:.75;margin-bottom:20px;}
 .star.favorited { color:gold; }
 @keyframes fadeIn{from{opacity:0; transform:translateY(6px)} to{opacity:1; transform:translateY(0)}}
 
-/* --- Falling Items --- */
+/* --- Falling items (generic) --- */
 .falling {
   position: fixed;
   top: -10px;
@@ -108,6 +108,18 @@ p.header-sub{text-align:center;opacity:.75;margin-bottom:20px;}
 @keyframes fall {
   0% { transform: translateY(0); opacity: 1; }
   100% { transform: translateY(100vh); opacity: 0; }
+}
+
+/* --- Winter snowflake style (kept for legacy snow) --- */
+.snowflake {
+  position: fixed;
+  top: -10px;
+  color: white;
+  font-size: 1.2em;
+  pointer-events: none;
+  animation-name: fall;
+  animation-timing-function: linear;
+  z-index: 9999;
 }
 
 /* --- Winter Mode Colors --- */
@@ -129,6 +141,16 @@ body.christmas {
   --text: #fff8e1;
   --subtitle: #ffc107;
 }
+
+/* --- Fireplace Mode Colors --- */
+body.fireplace {
+  --bg: #2b1a12;
+  --card-bg: #3c2418;
+  --card-hover: #4a2e1f;
+  --accent: #ff7043;
+  --text: #ffe0b2;
+  --subtitle: #ffcc80;
+}
 </style>
 </head>
 <body>
@@ -137,26 +159,26 @@ body.christmas {
 <a class="top-button changelogs-link" href="https://codingiscool464.github.io/changelogs" target="_blank">Change Logs</a>
 
 <div class="container">
-<h1>Game Launcher</h1>
-<p class="header-sub">Click a game to play!</p>
+  <h1>Game Launcher</h1>
+  <p class="header-sub">Click a game to play!</p>
 
-<!-- Search + Favorites Filter -->
-<div style="display:flex; gap:10px; align-items:center; margin-bottom:20px;">
-  <input id="search" type="text" placeholder="Search for a game…" aria-label="Search games">
-  <button id="filter-favorites" style="
-    padding:10px 16px;
-    border:none;
-    border-radius:8px;
-    background:var(--card-bg);
-    color:var(--accent);
-    font-weight:bold;
-    cursor:pointer;
-    transition:0.25s ease;
-  ">Show Favorites</button>
-</div>
+  <!-- Search + Favorites Filter -->
+  <div style="display:flex; gap:10px; align-items:center; margin-bottom:20px;">
+    <input id="search" type="text" placeholder="Search for a game…" aria-label="Search games">
+    <button id="filter-favorites" style="
+      padding:10px 16px;
+      border:none;
+      border-radius:8px;
+      background:var(--card-bg);
+      color:var(--accent);
+      font-weight:bold;
+      cursor:pointer;
+      transition:0.25s ease;
+    ">Show Favorites</button>
+  </div>
 
 <div id="game-list">
-  
+
 <!-- ALL GAME CARDS -->
 <a class="game-card" href="https://codingiscool464.github.io/a-small-world-cup/" target="_blank">
   <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1209.png');"></div>
@@ -319,7 +341,7 @@ body.christmas {
   <div class="game-info"><h2>Survival Race</h2><p>Tiles • Spleef • Car</p></div>
   <span class="star">★</span>
 </a>
-
+  
 </div>
 </div>
 
@@ -328,10 +350,11 @@ body.christmas {
 const stars = document.querySelectorAll('.star');
 stars.forEach(star => {
   const card = star.closest('.game-card');
-  const key = card.querySelector('h2').innerText;
-  if(localStorage.getItem(key)==='true'){ star.classList.add('favorited'); }
-  star.addEventListener('click', e=>{
+  const key = card.querySelector('h2')?.innerText || '';
+  if (key && localStorage.getItem(key) === 'true') { star.classList.add('favorited'); }
+  star.addEventListener('click', e => {
     e.preventDefault();
+    if (!key) return;
     star.classList.toggle('favorited');
     localStorage.setItem(key, star.classList.contains('favorited'));
   });
@@ -356,7 +379,7 @@ favButton.addEventListener("click", () => {
   document.querySelectorAll(".game-card").forEach(card => {
     const star = card.querySelector(".star");
     if (showingFavorites) {
-      card.style.display = star.classList.contains("favorited") ? "flex" : "none";
+      card.style.display = star && star.classList.contains("favorited") ? "flex" : "none";
     } else {
       card.style.display = "flex";
     }
@@ -367,7 +390,7 @@ favButton.addEventListener("click", () => {
 let snowInterval;
 function createSnowflake() {
   const snowflake = document.createElement("div");
-  snowflake.classList.add("falling");
+  snowflake.classList.add("snowflake");
   snowflake.textContent = "❄";
   snowflake.style.left = Math.random() * window.innerWidth + "px";
   const duration = 5 + Math.random() * 5;
@@ -398,6 +421,7 @@ function createChristmasItem() {
   item.style.left = Math.random() * window.innerWidth + "px";
   const duration = 5 + Math.random() * 5;
   item.style.animationDuration = duration + "s";
+  item.style.fontSize = (1 + Math.random() * 0.5) + "rem";
   document.body.appendChild(item);
   setTimeout(() => item.remove(), duration * 1000);
 }
@@ -410,16 +434,10 @@ function santaFlyAcross() {
   santa.style.fontSize = "2rem";
   santa.style.zIndex = "9999";
   santa.style.transition = "left 10s linear";
-
   document.body.appendChild(santa);
-
-  // Start moving Santa across the screen
   setTimeout(() => santa.style.left = window.innerWidth + "px", 100);
-
-  // Remove Santa after animation
   setTimeout(() => santa.remove(), 11000);
 }
-
 function startChristmas() {
   if (!christmasInterval) {
     christmasInterval = setInterval(createChristmasItem, 400);
@@ -427,7 +445,6 @@ function startChristmas() {
     document.body.classList.add("christmas");
   }
 }
-
 function stopChristmas() {
   clearInterval(christmasInterval);
   clearInterval(santaTimer);
@@ -436,32 +453,58 @@ function stopChristmas() {
   document.body.classList.remove("christmas");
 }
 
-// --- Random Event Selector ---
+// --- Fireplace Event (no sound) ---
+let fireplaceInterval;
+function createEmber() {
+  const ember = document.createElement("div");
+  ember.classList.add("falling");
+  ember.textContent = "🔥";
+  ember.style.left = Math.random() * window.innerWidth + "px";
+  const duration = 3 + Math.random() * 4; // 3–7s
+  ember.style.animationDuration = duration + "s";
+  ember.style.fontSize = (1 + Math.random() * 1.5) + "rem";
+  ember.style.filter = "drop-shadow(0 0 6px rgba(255,112,67,0.6))";
+  document.body.appendChild(ember);
+  setTimeout(() => ember.remove(), duration * 1000);
+}
+function startFireplace() {
+  if (!fireplaceInterval) {
+    fireplaceInterval = setInterval(createEmber, 500); // spawn every 0.5s
+    document.body.classList.add("fireplace");
+  }
+}
+function stopFireplace() {
+  clearInterval(fireplaceInterval);
+  fireplaceInterval = null;
+  document.body.classList.remove("fireplace");
+}
+
+// --- Random Event Selector (first 15 minutes each hour) ---
 function checkTime() {
   const now = new Date();
   const minutes = now.getMinutes();
 
   if (minutes >= 0 && minutes < 15) {
-    // Pick a random event
-    const events = ["snow", "christmas"];
+    const events = ["snow", "christmas", "fireplace"];
     const chosen = events[Math.floor(Math.random() * events.length)];
 
     if (chosen === "snow") {
-      startSnow();
-      stopChristmas();
+      startSnow(); stopChristmas(); stopFireplace();
+    } else if (chosen === "christmas") {
+      startChristmas(); stopSnow(); stopFireplace();
     } else {
-      startChristmas();
-      stopSnow();
+      startFireplace(); stopSnow(); stopChristmas();
     }
   } else {
     stopSnow();
     stopChristmas();
+    stopFireplace();
   }
 }
 
-// Check every minute
+// Run every minute and on load
 setInterval(checkTime, 60000);
-checkTime(); // run immediately on load
+checkTime();
 </script>
 </body>
 </html>
