--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ body.fireplace {
   
 <a class="game-card" href="https://codingiscool464.github.io/DreadheadParkour/" target="_blank">
   <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/dreadhead-parkour.png');"></div>
-  <div class="game-info"><h2>Dreadhead Parkour</h2><p>Car • 3D • Multi-Button</p></div>
+  <div class="game-info"><h2>Dreadhead Parkour</h2><p>Fast • 3D • Multi-Button</p></div>
   <span class="star">★</span>
 </a>
   
