--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ body.fireplace {
   --card-hover: #4a2e1f;
   --accent: #ff7043;
   --text: #ffe0b2;
-  --subtitle: #ffcc80;
+  --subtitle: #00337f;
 }
 </style>
 </head>
