--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ body.christmas {
   --card-hover: #3d2323;
   --accent: #4caf50;
   --text: #fff8e1;
-  --subtitle: #ffc107;
+  --subtitle: #003ef8;
 }
 
 /* --- Fireplace Mode Colors --- */
