--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@ p.header-sub{text-align:center;opacity:.75;margin-bottom:20px;}
   user-select:none;
 }
 .star.favorited { color:gold; }
+
+/* ✨ Hover glow effect */
+.star:hover {
+  text-shadow: 0 0 6px currentColor;
+}
+
 @keyframes fadeIn{from{opacity:0; transform:translateY(6px)} to{opacity:1; transform:translateY(0)}}
 
 /* --- Falling items (generic) --- */
